# pageql

./: .gitignore  AGENT.md  AGENTS.md  Dockerfile  README.md  TODO.md  __init__.py  before_test.py  data.db  fly.toml  pageql.py  pageql_server.py  pyproject.toml  test_parser.py  test_reactive.py  test_render.py
benchmarks/: async_uvicorn_benchmark.py  benchmark_pageql.py  benchmark_todos.py  benchmark_todos_with_watchers.py  benchmark_toggle_all_with_watchers.py  load_test.py  locust_load_test.py
dbms/: User Authentication (Behind the Scenes).dbm  cf1_5.dbm  comment_box_1_5.dbm  employee_database.dbm  order_entry_1_5.dbm
examples/: before_test.py  upload_example.py
templates/: todos2.pageql
tests/: browser_test_utils.py  conftest.py  playwright_helpers.py  test_add_reactive_elements.py  test_app.py  test_ast_dependencies.py  test_attach_directive.py  test_auth_page.py  test_basic_auth_sessionless.py  test_browser_integration.py  test_cachable_onevent.py  test_cli.py  test_connect_database.py  test_connection_log_level.py  test_csrf.py  test_debug_sql_logging.py  test_directory_index.py  test_dump_directive.py  test_each.py  test_embed_html_in_js.py  test_env.py  test_error_directive.py  test_error_messages.py  test_evalone.py  test_facebookauth_page.py  test_fetch_directive.py  test_fetch_utils.py  test_fetchhealth_page.py  test_file_upload.py  test_from_dependencies.py  test_from_first_row.py  test_from_infinite.py  test_from_infinite_console.py  test_from_infinite_wraps_order.py  test_github_auth.py  test_githubauth_page.py  test_gmailauth_page.py  (+51 more)
(+66 files in other folders)
